public class ExceedCollaboratorsException extends Exception {
    public ExceedCollaboratorsException(String message) {
        super(message);
    }
}
